--- a/packages/custom/events/public/views/create.html
+++ b/packages/custom/events/public/views/create.html
@@ -1,13 +1,12 @@
 <section data-ng-controller="EventsController">
   <p class="page-title">create a new event</p>
 
-
   <form style="float:none; left:25%" name="eventForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(eventForm.$valid)" novalidate>
 
     <div data-ng-controller="TracksController" data-ng-init="findAll()" class="form-group" ng-class="{ 'has-error' : submitted && eventForm.evTrack.value == null }">
       <label class="col-md-3 control-label">Track</label>
       <div class="col-md-7">
-        <select name="evTrack" class="form-control glowing-border" data-ng-model="evTrack" required>
+        <select name="evTrack" class="form-control glowing-border" data-ng-model="parentScope.evTrack" required>
           <option style="color:gray" value="">Select a track</option>
           <option data-ng-repeat="track in tracks" value="{{track._id}}">{{track.trackName}}</option>
         </select>
