--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -11,7 +11,7 @@
         <div class="panel-title table-title">upcoming events <a href="#!/events/create"><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
     </div>
 
-    <table style="height: 400px;" class="table table-hover table-striped table-bordered" fixed-header>
+    <table style="height: 400px;" class="table table-hover table-striped" fixed-header>
         <thead>
         <tr>
             <th>Date</th>
@@ -26,7 +26,7 @@
         <tr class="clickable-row" data-ng-repeat="event in events | filter: searchText | filterUpcoming | orderBy: 'eventStartDate'" ng-click="showEvent(event)">
             <td style="vertical-align:middle">{{event.eventStartDate | date:'MM/dd/yyyy'}}</td>
             <td style="vertical-align:middle">{{event.track.trackName}}</td>
-            <td style="vertical-align:middle">{{event.location}}</td>
+            <td style="vertical-align:middle">{{event.track.trackCity}}, {{event.track.trackState}}</td>
             <td style="vertical-align:middle">{{event.noviceCap - event.noviceRegistered}} - {{event.intermediateCap - event.intermediateRegistered}} - {{event.advancedCap - event.advancedRegistered}}</td>
             <td style="vertical-align:middle">{{event.basePrice | currency}}</td>
             <td style="text-align: right"><button class="btn btn-default">attend</button></td></a>
