updated default caps, fixed some styling, and edited a few routes

--- a/packages/system/public/assets/css/navbar.css
+++ b/packages/system/public/assets/css/navbar.css
@@ -1,4 +1,8 @@
 /* navbar */
+.nav-text{
+    font-size: 18px;
+    font-family: Impact, Charcoal, sans-serif;
+}
 .navbar {
     position: relative;
     width: 100%;
