--- a/packages/custom/events/public/views/past.html
+++ b/packages/custom/events/public/views/past.html
@@ -1,16 +1,16 @@
 <div style="width:70%;" class="panel panel-default center-block" data-ng-controller="EventsController" data-ng-init="find()">
-    <div class="panel-heading table-title-bg">
+    <div class="panel-heading">
         <div class="table-search pull-right">
             <div class="form-group input-group">
                 <span class="input-group-addon">
                     <i class="glyphicon glyphicon-search"></i>
                 </span>
-                <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search upcoming events"/></div>
+                <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search past events"/></div>
         </div>
-        <div class="panel-title table-title">past events</div>
+        <div class="table-title">past events</div>
     </div>
 
-    <table style="height: 250px" class="table table-hover table-striped" fixed-header>
+    <table style="height: 250px" class="table table-hover" fixed-header>
         <thead>
         <tr>
             <th>Date</th>
