--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -8,10 +8,10 @@
                 <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search upcoming events"/>
             </div>
         </div>
-        <div class="panel-title table-title">upcoming events <a href="#!/events/create"><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
+        <div class="table-title">upcoming events <a ui-sref='create event'><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
     </div>
 
-    <table style="height: 400px;" class="table table-hover table-striped" fixed-header>
+    <table style="height: 400px;" class="table table-hover" fixed-header>
         <thead>
         <tr>
             <th>Date</th>
