--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -53,9 +53,6 @@
     font-size: 26px;
     font-family: Impact, Charcoal, sans-serif;
 }
-.table-title-bg {
-    background-color: #f5f5f5;
-}
 .table-search {
     width: 30%;
     min-width: 250px;
@@ -63,4 +60,17 @@
 .clickable-row {
     cursor: pointer;
 }
+.selected {
+    background-color: #f5f5f5;
+}
 
+/* panel css */
+.panel-title {
+    color: #080808;
+    font-size: 26px;
+    font-family: Impact, Charcoal, sans-serif;
+}
+.panel-text {
+    font-size: 14px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
