found why faq fonts pages were off and fixed.

--- a/packages/custom/tracks/public/views/details.html
+++ b/packages/custom/tracks/public/views/details.html
@@ -1,13 +1,13 @@
 <div class="center-block" ng-show="currTrack">
     <div class="panel panel-default pull-left" style="margin: 0 10px auto; width: 400px;" >
-        <div class="panel-heading panel-title">track info
+        <div class="panel-heading table-title">track info
             <div class="panel-body panel-text">
                 <label style="width: 120px">Track Name: </label> {{currTrack.trackName}}<br>
                 <label style="width: 120px">Address: </label> {{currTrack.trackAddress}}<br>
                 <label style="width: 120px"> </label> {{currTrack.trackCity}}, {{currTrack.trackState}}<br>
             </div>
         </div>
-        <div class="panel-heading panel-title">description
+        <div class="panel-heading table-title">description
             <div class="panel-body panel-text">
                 {{currTrack.trackDescription}}
             </div>
@@ -16,7 +16,7 @@
 
     <div class="pull-left">
         <div class="panel panel-default" style="width:300px">
-            <div class="panel-heading panel-title">contact info
+            <div class="panel-heading table-title">contact info
                 <div class="panel-body panel-text">
                     <label style="width: 60px">Name: </label> {{currTrack.trackContactName}}<br>
                     <label style="width: 60px">Email: </label> {{currTrack.trackContactEmail}}<br>
