--- a/packages/system/public/views/faq.html
+++ b/packages/system/public/views/faq.html
@@ -9,7 +9,7 @@
             <accordion-heading>
                 <span class="glyphicon-group glyphicon pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
                 <span class="glyphicon-group pull-left glyphicon-asterisk glyphicon-space"></span>
-                <span class="valign-middle">{{group.title}}</span>
+                <strong class="valign-middle">{{group.title}}</strong>
                 <!--<span class="glyphicon glyphicon-remove-circle pull-right" style="color: red" ng-click="removeGroup(group)"></span>-->
             </accordion-heading>
             {{group.content}}
