forgot to add zip to the track details

--- a/packages/custom/tracks/public/views/details.html
+++ b/packages/custom/tracks/public/views/details.html
@@ -4,7 +4,7 @@
             <div class="panel-body panel-text">
                 <label style="width: 120px">Track Name: </label> {{currTrack.trackName}}<br>
                 <label style="width: 120px">Address: </label> {{currTrack.trackAddress}}<br>
-                <label style="width: 120px"> </label> {{currTrack.trackCity}}, {{currTrack.trackState}}<br>
+                <label style="width: 120px"> </label> {{currTrack.trackCity}}, {{currTrack.trackState}} {{currTrack.trackZip}}<br>
             </div>
         </div>
         <div class="panel-heading table-title">description
