--- a/packages/custom/events/public/views/index.html
+++ b/packages/custom/events/public/views/index.html
@@ -1,4 +1,5 @@
 <div class="container" data-ng-controller="EventsController">
+  <div data-ng-controller="ModalRegisteredController" data-ng-init="open()" />
   <div data-ng-include="'events/views/upcoming.html'"></div>
   <div data-ng-include="'events/views/past.html'"></div>
 </div>
