--- a/packages/custom/events/public/views/past.html
+++ b/packages/custom/events/public/views/past.html
@@ -21,8 +21,8 @@
         <tbody>
         <tr class="clickable-row" data-ng-repeat="event in events | filterPast | orderBy: '-eventStartDate' | filter: searchText" ng-click="showEvent(event)">
             <td>{{event.eventStartDate | date:'MM/dd/yyyy'}}</td>
-            <td>{{event.track.trackName}}</td>
-            <td>{{event.track.trackCity}}, {{event.track.trackState}}</td>
+            <td>{{event.trackId.trackName}}</td>
+            <td>{{event.trackId.trackCity}}, {{event.trackId.trackState}}</td>
         </tr>
         </tbody>
     </table>
