--- a/packages/custom/announcements/public/views/create.html
+++ b/packages/custom/announcements/public/views/create.html
@@ -2,10 +2,10 @@
     <h1>Create Announcement</h1>
 </div>
 <div class="modal-body" data-ng-controller="AnnouncementsController">
-    <form name="announcementForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
+    <form name="announcementForm" class="form-horizontal " role="form" data-ng-submit="create(announcementForm.$valid)" novalidate>
         <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsTitle.$invalid }">
-            <label class="col-md-3 control-label">Title</label>
-            <div class="col-md-9">
+            <label class=" control-label">Title</label>
+            <div>
                 <input name="newsTitle" type="text" class="form-control" data-ng-model="newsTitle" id="title" placeholder="Title" required>
                 <div data-ng-show="submitted && announcementForm.newsTitle.$invalid" class="help-block">
                     <p data-ng-show="announcementForm.newsTitle.$error.required">Title is required</p>
@@ -13,8 +13,8 @@
             </div>
         </div>
         <div class="form-group" data-ng-class="{ 'has-error' : submitted && announcementForm.newsBody.$invalid }">
-            <label for="newsBody" class="col-md-3 control-label">Content</label>
-            <div class="col-md-9">
+            <label for="newsBody" class=" control-label">Content</label>
+            <div>
                 <textarea name="newsBody" data-ng-model="newsBody" id="newsBody" cols="50" rows="8" placeholder="Content" class="form-control" required></textarea>
                 <div data-ng-show="submitted && announcementForm.newsBody.$invalid" class="help-block">
                     <p data-ng-show="announcementForm.newsBody.$error.required">Content is required</p>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-3 col-md-9">
+            <div>
                 <button type="submit" class="btn btn-info">Create</button>
                 <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
             </div>
