syntax error fixes

--- a/packages/custom/events/public/views/share.html
+++ b/packages/custom/events/public/views/share.html
@@ -150,11 +150,9 @@
             font-size: 12px;
         }
     }
-
-
 </style>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container" style="color: #777777;  font-family: "Helvetica Neue" sans-serif; font-size: 13px; line-height: 19.5px;">
+<div class="container" style="color: #777777;  font-family: Helvetica Neue sans-serif; font-size: 13px; line-height: 19px;">
     <div class="row mobile-social-share">
         <div class="col-md-9">
             <h3>Share this content</h3>
