--- a/packages/custom/events/public/views/register.html
+++ b/packages/custom/events/public/views/register.html
@@ -4,7 +4,7 @@
             <h3 class="modal-title">Register for Event</h3>
         </div>
         <div class="modal-body">
-            <span us-spinner spinner-key="registration-spinner"></span>
+           <!-- <span us-spinner spinner-key="registration-spinner"></span> -->
             <form name="registerForm" class="form-horizontal col-md-6" role="form" data-ng-submit="create(registerForm.$valid)" action="https://www.paypal.com/cgi-bin/webscr" method="post" novalidate>
             <div class="form-group" data-ng-class="{ 'has-error' : submitted && registerForm.skill.$invalid }">
                 <label mean-token="'register-skill'" for="skillClass" class="col-md-3 control-label">Skill</label>
