--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -6,6 +6,28 @@
     text-align: center;
 }
 
+h1 {
+    font-size: 40px;
+    color: #080808;
+    font-family: Impact, Charcoal, sans-serif;
+    text-align: center;
+    margin: 0;
+}
+h2 {
+    font-size: 22px;
+    color: #080808;
+    font-family: Impact, Charcoal, sans-serif;
+    text-align: center;
+    margin: 0;
+}
+h3 {
+    font-size: 20px;
+    color: #080808;
+    font-family: Impact, Charcoal, sans-serif;
+    text-align: center;
+    margin: 0;
+}
+
 /* button css */
 .btn-default {
     background: #ffffff;
