--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -7,22 +7,22 @@
 }
 
 h1 {
-    font-size: 40px;
-    color: #080808;
+    font-size: 44px;
+    color: #010101;
     font-family: Impact, Charcoal, sans-serif;
     text-align: center;
     margin: 0;
 }
 h2 {
     font-size: 22px;
-    color: #080808;
+    color: #010101;
     font-family: Impact, Charcoal, sans-serif;
     text-align: center;
     margin: 0;
 }
 h3 {
     font-size: 20px;
-    color: #080808;
+    color: #010101;
     font-family: Impact, Charcoal, sans-serif;
     text-align: center;
     margin: 0;
@@ -34,6 +34,7 @@ h3 {
     border-color: red;
     font-size: 16px;
     line-height: 16px;
+    min-width: 80px;
     height: 32px;
     color: #080808;
     font-family: Impact, Charcoal, sans-serif;
