--- a/packages/system/public/views/header.html
+++ b/packages/system/public/views/header.html
@@ -42,7 +42,7 @@
                     <ul class="navbar-nav nav" data-ng-show="global.authenticated">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                {{global.user.name}} <b class="caret"></b>
+                                {{global.user.userFirstName}}  {{global.user.userLastName}} <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">My Account</a></li>
