trying to line up the carousel correctly

--- a/packages/custom/events/public/assets/css/events.css
+++ b/packages/custom/events/public/assets/css/events.css
@@ -65,7 +65,6 @@
 .carousel{
   border-radius: 65px 65px 65px 65px;
   overflow: hidden;
-  margin-top: 20px;
   width: 380px;
   border-color: red;
 
@@ -90,4 +89,15 @@ table.strapless{
 }
 .panel-body{
   padding : 0;
+}
+
+.slides_control > div{
+  height: 200px;
+}
+.slides_control {
+  position:absolute;
+  width: 400px;
+  left:50%;
+  top:20px;
+  margin-left:-200px;
 }
